<resources>
    <string name="app_name" translatable="false">Realtime Translator</string>

    <!-- Strings related to login and signup-->
    <string name="conf_password">Confirm your password</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_login_in_short">Log in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to Main -->
    <string name="source_language">Choose the source language</string>
    <string name="lang_arabic">Arabic</string>
    <string name="lang_english">English</string>
    <string name="lang_indonesian">Indonesian</string>
    <string name="action_speak">Speak</string>
    <string name="action_log_out">Log out</string>

    <!-- Strings related to Speak -->
    <string name="speak_text">Hold to speak</string>
    <string name="action_back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
