<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".CallDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/caller_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center|top"
            android:textColor="@color/cardview_light_background"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/lang_group_call"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/source_lang"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/lang_arabic_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lang_arabic"
                        android:textColor="@color/cardview_light_background"
                        app:buttonTint="@color/cardview_light_background" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/lang_english_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lang_english"
                        android:textColor="@color/cardview_light_background"
                        app:buttonTint="@color/cardview_light_background" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/lang_indonesian_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lang_indonesian"
                        android:textColor="@color/cardview_light_background"
                        app:buttonTint="@color/cardview_light_background" />
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
        </RadioGroup>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_call_end_red_a700_48dp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/call_end"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_call_light_green_a700_48dp" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</FrameLayout>